--- a/index.html
+++ b/index.html
@@ -7,8 +7,46 @@
     <title>Webpage design</title>
 </head>
 <body>
-    <h1>Bonjour!</h1>
-    <p>Ceci est un paragraphe</p>
-    <p>Ceci est un autre paragraphe</p>
+    <section id="sec">
+        <div class="images">
+        <ul class="div">
+            <li class="etabl">
+                <div>
+                    <img src="univ pic.jpg" alt="">
+                    <div class="info">
+                        <span>Our University</span>
+                    </div>
+                    <div class="bouton">
+                        <a href="#">Explore</a>
+                </div>
+                </div>
+            </li>
+            <li class="etabl">
+                <div>
+                    <img src="univ1.jpg" alt="">
+                    <div class="info">
+                        <span>Our University</span>
+                    </div>
+                    <div class="bouton">
+                        <a href="#">Explore</a>
+                </div>
+                </div>
+            </li>
+            <li class="etabl">
+                <div>
+                    <img src="etudiant.jpg" alt="">
+                    <div class="info">
+                        <span>Students learning</span>
+                    </div>
+                    <div class="bouton">
+                        <a href="#">Apply</a>
+                    </div>
+                </div>
+            </li>
+        
+        </ul>
+        </div>
+    </section>
+
 </body>
 </html>
